<resources>
    <string name="app_name">Tip Calculator</string>

    <!-- menu items -->
    <string name="history">History</string>
    <string name="about">About</string>

    <!-- about dialog -->
    <string name="author">Alex Tetervak, Sheridan College, 2022</string>

    <!-- Strings used for fragments for navigation -->
    <string name="calculator_fragment_label">Calculator</string>
    <string name="history_fragment_label">History</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- common output labels -->
    <string name="tip_amount">Tip Amount</string>
    <string name="bill_total">Bill Total</string>

    <!-- calculator fragment -->
    <string name="tip_calculator">Tip Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="service_quality">Service Quality</string>
    <string name="round_up_tip">Round Up Tip</string>
    <string name="invalid_input">Invalid Input</string>

    <!-- history fragment -->
    <string name="history_is_empty">The History is Empty</string>
    <string name="delete_history_item">Delete History Item</string>
    <string name="date">Date</string>
    <string name="date_and_time">Date and Time</string>
    <string name="clear_all_history">Clear All History</string>

    <!-- details fragment -->
    <string name="calculation_details">Calculation Details</string>
    <string name="details">Details</string>
    <string name="time">Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>