<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/calculator_fragment_label"
    app:startDestination="@id/calculatorFragment">

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="ca.tetervak.tipcalculator.ui.calculator.CalculatorFragment"
        android:label="@string/calculator_fragment_label"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="ca.tetervak.tipcalculator.ui.history.HistoryFragment"
        android:label="@string/history_fragment_label"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_historyFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <dialog
        android:id="@+id/aboutFragment"
        android:name="ca.tetervak.tipcalculator.ui.about.AboutFragment"
        android:label="AboutFragment" />
    <action android:id="@+id/action_global_aboutFragment" app:destination="@id/aboutFragment" />
    <action android:id="@+id/action_global_historyFragment" app:destination="@id/historyFragment"/>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="ca.tetervak.tipcalculator.ui.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="itemId"
            app:argType="integer" />
    </fragment>
</navigation>