<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.calculator.CalculatorFragment">

    <data>
        <variable
            name="viewModel"
            type="ca.tetervak.tipcalculator.ui.calculator.CalculatorViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tip_calculator_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tip_calculator"
            android:textSize="24sp"
            android:textColor="@color/pink_500" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="8dp">

            <TableLayout
                android:id="@+id/input_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/cost_of_service_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/cost_of_service_input"
                        android:text="@string/cost_of_service"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/cost_of_service_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="5"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/service_quality_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_quality"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/service_quality_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:minHeight="48dp"
                        tools:listitem="@layout/quality_input_item" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/round_up_tip_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:checked="true"
                        android:text="@string/round_up_tip"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/calculate" />


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="8dp">

            <TableLayout
                android:id="@+id/output_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tip_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tip_amount"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tip_amount_output"
                        currencyValue="@{viewModel.liveUiState.tipAmount}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp"
                        tools:text="$2.00" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/bill_total_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/bill_total"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/bill_total_output"
                        currencyValue="@{viewModel.liveUiState.billTotal}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp"
                        tools:text="$18.27" />
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>