<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="itemUiState"
            type="ca.tetervak.tipcalculator.ui.history.HistoryItemUiState" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_output"
                dateAndTimeValues="@{itemUiState.date}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autoSizeTextType="none"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:text="date and time" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@null"
                android:contentDescription="@string/delete_history_item"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_clear_24"
                style="@android:style/Widget.DeviceDefault.Light.ImageButton"/>
        </LinearLayout>

        <TableLayout
            android:id="@+id/output_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tip_amount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/tip_amount"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tip_amount_output"
                    currencyValue="@{itemUiState.tipAmount}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    tools:text="$2.00" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/bill_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/bill_total"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bill_total_output"
                    currencyValue="@{itemUiState.billTotal}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/purple_500"
                    android:textSize="20sp"
                    tools:text="$18.27" />
            </TableRow>

        </TableLayout>

        <View
            android:id="@+id/list_item_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>
</layout>